쿼리 AOP 변경